Sun Aug 13 13:08:12 PDT 2006
  Fix bug which caused either extra garbage around function links in src or
  skipped some interlinks.
  Release bashdoc-0.1.8

Sun Jan 22 16:22:45 EST 2006
  ChangeLog: Started
  src2html: changed sed to fix the weird invalid range end erors
    Changes suggested by Jaka Kranjc
  generate-smgl-docs: Add handy example doc generation
    script, written by and for SourceMage
  generate-smgl-docs: Patch by Jaka Kranjc
  generate-smgl-docs: Add -q to bashdoc call to limit useless output
  Release: bashdoc-0.1.7